# skrolgram

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
_core/: asgi.py  settings.py  urls.py  wsgi.py
skrolgram/: apps.py
templates/admin/: base_site.html
templates/skrolgram/: base.html
